# nonogram-gamer-rs

./: Cargo.toml  README.md
resources/: heart.yaml
src/: ai_player.rs  clickable_zone.rs  description.rs  game_state.rs  grid.rs  line.rs  main.rs  meshes.rs  nonogram_target.rs  nonogram_transaction.rs  play_engine.rs  simple_engine.rs  transaction.rs
src/strategy/: mod.rs  simple.rs
