[package]
name = "nonogram-gamer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
ggez = "0.9.3"
serde = { version = "1.0", features = ["serde_derive"] }
serde_yaml = "0.9"
